Fix layout bugs
Fixed layout incosistencies and set layout of interests section to grid.

--- a/styles.css
+++ b/styles.css
@@ -56,13 +56,27 @@ section {
     border-bottom: solid black 1px;
     padding-bottom: 25px;
 }
-
-
+.interests {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto;
+    justify-content: center;
+}
+article {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 20px;
+    
+}
 footer {
     margin: 15px;
 
 }
+.w-100 {
+    grid-column: 1 / span 2;
 
+    
+}
 img {
     width: 100%;
 }
@@ -160,8 +174,8 @@ img {
 
 .interests-block {
     display: inline-grid;
-    width: 45%;
-    padding: 20px;
+
+
 }
 
 .project-button:hover {
